2005-04-24    <tino@firebird.03.softkill.net>

	* file.h: tino_file_notdir added

	* Makefile-test.sh (genit, runit): New TEST case: TESTCMP for filetool.h

	* filetool.h: added

2005-04-16    <tino@firebird.03.softkill.net>

	* Makefile.proto (all): No more dependency of Makefile: all

2005-04-15    <tino@firebird.03.softkill.net>

	* Makefile-tar.sh, Makefile (GAT): startet to add gat support

	* Makefile.proto (tino/lib.h): removed
	(install): now, strip is only called if cp is successful

	* Makefile (lib.h): lib.h now is a pure dummy

2005-04-10    <tino@firebird.03.softkill.net>

	* fatal.h (TINO_FATAL_IF): added

2005-03-15    <tino@firebird.03.softkill.net>

	* xd.h: include fixes, does not need fatal.h

2005-03-04    <tino@firebird.03.softkill.net>

	* hasher.h (hasher): The old hash band functions were poor, so
	reverted back to slower but mathematically correct solution using
	a polynomial: hash[n]=f[x[i]](n)=sum[i=0..len](x[i]*n^i) where
	x[i] is the data (actually, it's calculated backwards).  Hopefully
	modern processors will sometimes become able to calculate the
	mul+add in one cpu cycle.

	* file.h (tino_file_mmap_anon): added

	* ex.h (tino_verror): support of tino_verror_fn added

	* dir.h (tino_dir_read): created

	* slist.h (tino_slist_destroy, tino_glist_destroy): added

2005-02-06    <tino@firebird.03.softkill.net>

	* Makefile-tar.sh (ANNOUNCE DESCRIPTION COOPYING): make dist did
	not work any more, oops ;)

	* getopt.h (tino_getopt): -- is made ARG in certain situations

2005-01-27    <tino@firebird.03.softkill.net>

	* getopt.h (tino_getopt): DD otion added
	(main): integer now active in unit_test

2005-01-26    <tino@firebird.03.softkill.net>

	* xd.h (main, xd): added
	(tino_xd): improved for better formatting

	* sock.h (tino_sock_getaddr, tino_sock_tcp_listen): added from
	accept.c/socklinger.c

	* setproctitle.h (tino_setproctitle): superfluous variable removed.

	* str.h (tino_str_vprintf): better FATAL text
