@@ -60,7 +60,10 @@
  * handles which are likely to never go over 16 bit.
  *
  * $Log$
- * Revision 1.13  2005-04-24 13:44:11  tino
+ * Revision 1.14  2005-04-25 23:07:01  tino
+ * some new routines
+ *
+ * Revision 1.13  2005/04/24 13:44:11  tino
  * tino_file_notdir
  *
  * Revision 1.12  2005/04/24 12:55:38  tino
@@ -172,6 +175,16 @@ tino_file_notdir(const char *name)
   if (S_ISDIR(st.st_mode))
     return 0;
   return 1;
+}
+
+static int
+tino_file_notexists(const char *name)
+{
+  tino_file_stat_t	st;
+
+  if (tino_file_lstat(name, &st))
+    return -1;
+  return 0;
 }
 
 
