@@ -3,7 +3,10 @@
  * Additionally file helpers
  *
  * $Log$
- * Revision 1.2  2005-04-24 13:44:11  tino
+ * Revision 1.3  2005-04-25 23:07:01  tino
+ * some new routines
+ *
+ * Revision 1.2  2005/04/24 13:44:11  tino
  * tino_file_notdir
  *
  * Revision 1.1  2005/04/24 12:55:38  tino
@@ -19,7 +22,7 @@
 
 /* well, be prepared for windows
  */
-#define	DRIVE_SEP_CHAR	0
+#define	DRIVE_SEP_CHAR	0	/* untested	*/
 #define	PATH_SEP_CHAR	'/'
 
 
@@ -90,6 +93,56 @@ tino_file_glue_path(char *buf, size_t max, const char *path, const char *name)
   return buf;
 }
 
+static int
+tino_file_dirfileoffset(const char *buf, int file)
+{
+  int	i, offset;
+
+  if (file)
+    file	= 1;
+  offset	= 0;
+#if DRIVE_SEP_CHAR
+  if (isalpha(*buf) && buf[1]==DRIVE_SEP_CHAR)
+    offset	+= 2;
+#endif
+  for (i=offset; buf[i]; i++)
+    if (buf[i]==PATH_SEP_CHAR)
+      offset	= i+file;
+  return offset;
+}
+
+static char *
+tino_file_dirname(char *buf, size_t max, const char *name)
+{
+  int	offset;
+
+  offset	= tino_file_dirfileoffset(buf, 0);
+  if (!buf)
+    {
+      if (max<BUFSIZ)
+	max	= offset+1;
+      buf	= tino_alloc(max);
+    }
+  if (max>offset)
+    max	= offset+1;
+  return tino_strxcpy(buf, name, max);
+}
+
+static char *
+tino_file_filename(char *buf, size_t max, const char *name)
+{
+  int		offset;
+
+  offset	= tino_file_dirfileoffset(name, 1);
+  if (!buf)
+    {
+      if (max<BUFSIZ)
+	max	= strlen(name+offset)+1;
+      buf	= tino_alloc(max);
+    }
+  return tino_strxcpy(buf, name+offset, max);
+}
+
 #ifdef TINO_TEST_UNIT
 TESTCMP("/B", tino_file_glue_path(NULL, 0, "/A", "/B"));
 TESTCMP("/B", tino_file_glue_path(NULL, 0, "A", "/B"));
@@ -98,6 +151,10 @@ TESTCMP("/A/B", tino_file_glue_path(NULL, 0, "/A", "B"));
 TESTCMP("B", tino_file_glue_path(NULL, 0, NULL, "B"));
 TESTCMP("A", tino_file_glue_path(NULL, 0, "A", NULL));
 TESTCMP("", tino_file_glue_path(NULL, 0, NULL, NULL));
+TESTCMP("", tino_file_dirname(NULL, 0, "/"));
+TESTCMP("A", tino_file_dirname(NULL, 0, "A/B"));
+TESTCMP("", tino_file_filename(NULL, 0, "A/"));
+TESTCMP("B", tino_file_filename(NULL, 0, "A/B"));
 #endif
 
 #endif
